--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,22 @@
         android:theme="@style/Theme.ChatAppFirebase"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
-            android:exported="true">
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ChatActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity"
